k8s/namespace.yaml
apiVersion: v1 
kind: Namespace 
metadata: 
 name: app-deployment 
 labels: 
   name: app-deployment
