k8s/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
 name: my-app-service 
 namespace: app-deployment 
 labels: 
   app: my-app 
spec: 
 type: ClusterIP 
 selector: 
   app: my-app 
 ports: 
 - port: 80 
   targetPort: 5000 
   protocol: TCP 
   name: http
